--- a/configs/service.yaml
+++ b/configs/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: msql
-  name: msql
+    app: mysql
+  name: mysql
   namespace: default
 spec:
   ports:
@@ -11,5 +11,5 @@ spec:
     protocol: TCP
     targetPort: 80
   selector:
-    app: msql
+    app: mysql
   type: NodePort
