--- a/configs/service.yaml
+++ b/configs/service.yaml
@@ -1,15 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: mysql
   name: mysql
-  namespace: default
 spec:
   ports:
-  - port: 90
-    protocol: TCP
-    targetPort: 80
+  - port: 3306
   selector:
     app: mysql
-  type: NodePort
+  clusterIP: None
