--- a/configs/service.yaml
+++ b/configs/service.yaml
@@ -1,10 +1,22 @@
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: mysql
+# spec:
+#   ports:
+#   - port: 90
+#   selector:
+#     app: mysql
+#   clusterIP: None
 apiVersion: v1
 kind: Service
 metadata:
   name: mysql
+  labels:
+    app: mysql
 spec:
+  type: ClusterIP
   ports:
-  - port: 3306
+    - port: 3306
   selector:
     app: mysql
-  clusterIP: None
